fixed 1mb chart, axes labels

--- a/results/results.html
+++ b/results/results.html
@@ -19,12 +19,12 @@
         data: {
             labels: ["1 byte", "64 byte","1 kilobyte"], 
             datasets: [{
-                data:[1717212.0, 1689959.6, 1929216.0],
+                data:[2872827.2, 2635502.0, 3526815.8],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[1505965.8, 1534923.6, 1976083.0],
+                data:[1511341.2, 1517597.4, 2255986.4],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -55,7 +55,7 @@
 						display: true,
 						scaleLabel: {
 							display: true,
-							labelString: 'Milliseconds'
+							labelString: 'Time in Nanoseconds'
 						}
 					}]
 				}
@@ -72,12 +72,12 @@
         data: {
             labels: ["1 byte", "64 byte","1 kilobyte"], 
             datasets: [{
-                data:[2422811.2, 2589080.0, 2762743.4],
+                data:[2297319.2, 1930049.8, 2072299.4],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[1490570.2, 1593643.8, 1844597.2],
+                data:[1569933.4, 1714288.6, 2209259.6],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -108,7 +108,7 @@
 						display: true,
 						scaleLabel: {
 							display: true,
-							labelString: 'Milliseconds'
+							labelString: 'Time in Nanoseconds'
 						}
 					}]
 				}
@@ -161,7 +161,7 @@
 						display: true,
 						scaleLabel: {
 							display: true,
-							labelString: 'Milliseconds'
+							labelString: 'Time in Nanoseconds'
 						}
 					}]
 				}
@@ -178,7 +178,7 @@
         data: {
             labels: ["1K", "16K","64K","256K","1M"], 
             datasets: [{
-                data:[4.145574856926556, 24.846344376945005, 45.51747407467447, 54.35073577191409, 66.30358290416757],
+                data:[3.6312275641377982, 22.83821562222324, 39.70989947962103, 47.38300039785279, 54.35689153296689],
                 label: "Throughput",
                 borderColor: "#FF0000",
                 fill: false
@@ -226,7 +226,7 @@
         data: {
             labels: ["1K", "16K","64K","256K","1M"], 
             datasets: [{
-                data:[4.441077976264954, 27.175711442510448, 43.92198619918328, 53.89327233896559, 61.467906429519005],
+                data:[3.7080296041261964, 19.67397625211533, 35.274053983792, 43.89547802890827, 49.240408807400456],
                 label: "Throughput",
                 borderColor: "#FF0000",
                 fill: false
@@ -322,12 +322,12 @@
         data: {
             labels: ["256", "512","1024"], 
             datasets: [{
-                data:[1.868239203E9, 3.469304139E9, 6.628456970039216E9],
+                data:[1.973063856E9, 3.507977107E9, 6.865960912815686E9],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[1.842051584E9, 3.466382513E9, 6.618281164E9],
+                data:[6.76176363E9, 3.482898558E9, 1.975633196E9],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -336,7 +336,7 @@
 				responsive: true,
 				title: {
 					display: true,
-					text: 'TCP vs. UDP Times to Send 1MB in Varying Message Sizes129.3.20.2'
+					text: 'TCP vs. UDP Times to Send 1MB in Varying Message Sizes 129.3.20.2'
 				},
 				tooltips: {
 					mode: 'index',
@@ -375,12 +375,12 @@
         data: {
             labels: ["256", "512","1024"], 
             datasets: [{
-                data:[2.087852454E9, 3.93063062E9, 7.223189891513725E9],
+                data:[2.105172218E9, 3.585957132E9, 7.225408342337255E9],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[1.815126743E9, 3.547241313E9, 6.669488353E9],
+                data:[6.828612781E9, 3.76043696E9, 2.072730097E9],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -389,7 +389,7 @@
 				responsive: true,
 				title: {
 					display: true,
-					text: 'TCP vs. UDP Times to Send 1MB in Varying Message Sizes129.3.20.26'
+					text: 'TCP vs. UDP Times to Send 1MB in Varying Message Sizes 129.3.20.26'
 				},
 				tooltips: {
 					mode: 'index',
@@ -442,7 +442,7 @@
 				responsive: true,
 				title: {
 					display: true,
-					text: 'TCP vs. UDP Times to Send 1MB in Varying Message Sizeslocalhost'
+					text: 'TCP vs. UDP Times to Send 1MB in Varying Message Sizes localhost'
 				},
 				tooltips: {
 					mode: 'index',
