--- a/results/results.html
+++ b/results/results.html
@@ -19,12 +19,12 @@
         data: {
             labels: ["1 byte", "64 byte","1 kilobyte"], 
             datasets: [{
-                data:[2872827.2, 2635502.0, 3526815.8],
+                data:[2872.8272, 2635.502, 3526.8158],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[1511341.2, 1517597.4, 2255986.4],
+                data:[1511.3411999999998, 1517.5973999999999, 2255.9864],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -55,7 +55,7 @@
 						display: true,
 						scaleLabel: {
 							display: true,
-							labelString: 'Time in Nanoseconds'
+							labelString: 'Time in Milliseconds'
 						}
 					}]
 				}
@@ -72,12 +72,12 @@
         data: {
             labels: ["1 byte", "64 byte","1 kilobyte"], 
             datasets: [{
-                data:[2297319.2, 1930049.8, 2072299.4],
+                data:[2297.3192000000004, 1930.0498, 2072.2994],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[1569933.4, 1714288.6, 2209259.6],
+                data:[1569.9334, 1714.2886, 2209.2596000000003],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -108,7 +108,7 @@
 						display: true,
 						scaleLabel: {
 							display: true,
-							labelString: 'Time in Nanoseconds'
+							labelString: 'Time in Milliseconds'
 						}
 					}]
 				}
@@ -125,12 +125,12 @@
         data: {
             labels: ["1 byte", "64 byte","1 kilobyte"], 
             datasets: [{
-                data:[53533.0, 59594.8, 108825.4],
+                data:[53.533, 59.594800000000006, 108.82539999999999],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[78862.2, 84551.8, 83699.2],
+                data:[78.8622, 84.5518, 83.69919999999999],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -161,7 +161,7 @@
 						display: true,
 						scaleLabel: {
 							display: true,
-							labelString: 'Time in Nanoseconds'
+							labelString: 'Time in Milliseconds'
 						}
 					}]
 				}
@@ -322,12 +322,12 @@
         data: {
             labels: ["256", "512","1024"], 
             datasets: [{
-                data:[1.973063856E9, 3.507977107E9, 6.865960912815686E9],
+                data:[1.973063856, 3.507977107, 6.865960912815686],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[6.76176363E9, 3.482898558E9, 1.975633196E9],
+                data:[6.76176363, 3.482898558, 1.975633196],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -358,7 +358,7 @@
 						display: true,
 						scaleLabel: {
 							display: true,
-							labelString: 'Time in Nanoseconds'
+							labelString: 'Time in Seconds'
 						}
 					}]
 				}
@@ -375,12 +375,12 @@
         data: {
             labels: ["256", "512","1024"], 
             datasets: [{
-                data:[2.105172218E9, 3.585957132E9, 7.225408342337255E9],
+                data:[2.105172218, 3.585957132, 7.225408342337254],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[6.828612781E9, 3.76043696E9, 2.072730097E9],
+                data:[6.828612781, 3.76043696, 2.072730097],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -411,7 +411,7 @@
 						display: true,
 						scaleLabel: {
 							display: true,
-							labelString: 'Time in Nanoseconds'
+							labelString: 'Time in Seconds'
 						}
 					}]
 				}
@@ -428,12 +428,12 @@
         data: {
             labels: ["256", "512","1024"], 
             datasets: [{
-                data:[5.2217028E7, 8.1853655E7, 1.7590949345882353E8],
+                data:[0.052217028, 0.081853655, 0.17590949345882353],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[1.536417E8, 1.20289463E8, 4.5942242E7],
+                data:[0.1536417, 0.120289463, 0.045942242],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -464,7 +464,7 @@
 						display: true,
 						scaleLabel: {
 							display: true,
-							labelString: 'Time in Nanoseconds'
+							labelString: 'Time in Seconds'
 						}
 					}]
 				}
