trials ran, files accurate for output

--- a/results/results.html
+++ b/results/results.html
@@ -19,12 +19,12 @@
         data: {
             labels: ["1 byte", "64 byte","1 kilobyte"], 
             datasets: [{
-                data:[2872.8272, 2635.502, 3526.8158],
+                data:[1823.8006, 1936.3992, 2295.8086000000003],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[1511.3411999999998, 1517.5973999999999, 2255.9864],
+                data:[2130.1326, 2594.094, 3024.0332000000003],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -72,12 +72,12 @@
         data: {
             labels: ["1 byte", "64 byte","1 kilobyte"], 
             datasets: [{
-                data:[2297.3192000000004, 1930.0498, 2072.2994],
+                data:[1737.1592, 1661.0166000000002, 2057.035],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[1569.9334, 1714.2886, 2209.2596000000003],
+                data:[1599.7028, 1507.081, 2026.3268],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -125,12 +125,12 @@
         data: {
             labels: ["1 byte", "64 byte","1 kilobyte"], 
             datasets: [{
-                data:[53.533, 59.594800000000006, 108.82539999999999],
+                data:[107.9088, 119.1832, 162.3896],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[78.8622, 84.5518, 83.69919999999999],
+                data:[113.7982, 75.6062, 83.285],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -178,7 +178,7 @@
         data: {
             labels: ["1K", "16K","64K","256K","1M"], 
             datasets: [{
-                data:[3.6312275641377982, 22.83821562222324, 39.70989947962103, 47.38300039785279, 54.35689153296689],
+                data:[2.7089649677126557, 14.898447493384403, 23.78671804195124, 27.920521508486633, 24.95878111185966],
                 label: "Throughput",
                 borderColor: "#FF0000",
                 fill: false
@@ -226,7 +226,7 @@
         data: {
             labels: ["1K", "16K","64K","256K","1M"], 
             datasets: [{
-                data:[3.7080296041261964, 19.67397625211533, 35.274053983792, 43.89547802890827, 49.240408807400456],
+                data:[4.042783227266204, 19.59752468813842, 33.2954756655561, 41.368950171359586, 48.29347134006798],
                 label: "Throughput",
                 borderColor: "#FF0000",
                 fill: false
@@ -274,7 +274,7 @@
         data: {
             labels: ["1K", "16K","64K","256K","1M"], 
             datasets: [{
-                data:[97.87429270530663, 1237.7847702006943, 2653.513011773304, 4046.490555785811, 5202.541444591678],
+                data:[98.36104940865702, 1347.2908631904413, 2678.691677217162, 3496.8397329588524, 3654.6082629287],
                 label: "Throughput",
                 borderColor: "#FF0000",
                 fill: false
@@ -322,12 +322,12 @@
         data: {
             labels: ["256", "512","1024"], 
             datasets: [{
-                data:[1.973063856, 3.507977107, 6.865960912815686],
+                data:[6.901191325615686, 3.858407799, 2.47785366],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[6.76176363, 3.482898558, 1.975633196],
+                data:[7.041567193, 3.558410439, 2.367454562],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -375,12 +375,12 @@
         data: {
             labels: ["256", "512","1024"], 
             datasets: [{
-                data:[2.105172218, 3.585957132, 7.225408342337254],
+                data:[7.245522928941177, 3.967922132, 2.132992297],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[6.828612781, 3.76043696, 2.072730097],
+                data:[7.284174704, 3.666430098, 2.041535928],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
@@ -428,12 +428,12 @@
         data: {
             labels: ["256", "512","1024"], 
             datasets: [{
-                data:[0.052217028, 0.081853655, 0.17590949345882353],
+                data:[0.17665027714509804, 0.078794898, 0.051008014],
                 label: "UDP",
                 borderColor: "#FF0000",
                 fill: false
                },{
-                data:[0.1536417, 0.120289463, 0.045942242],
+                data:[0.172613106, 0.118336755, 0.044516988],
                 label: "TCP",
                 borderColor: "#0078ff",
                 fill: false
